--- a/islamic-courses-5.html
+++ b/islamic-courses-5.html
@@ -526,7 +526,7 @@
               <h4 class="text-light mb-4">Latest Post</h4>
               <div class="d-flex border-bottom border-secondary py-4">
                 <img
-                  src="img/blog-mini-1.jpg"
+                  src="img/blog-mini-1.webp"
                   class="img-fluid flex-shrink-0"
                   alt=""
                 />
@@ -539,7 +539,7 @@
               </div>
               <div class="d-flex py-4">
                 <img
-                  src="img/blog-mini-2.jpg"
+                  src="img/blog-mini-2.webp"
                   class="img-fluid flex-shrink-0"
                   alt=""
                 />
@@ -587,4 +587,5 @@
   <script src="js/main.js" defer></script>
   </body>
 </html>
+
 
