--- a/pillars-of-islam-sermon.html
+++ b/pillars-of-islam-sermon.html
@@ -227,7 +227,7 @@
 <!-- Start Pillars of Islam -->
 <section class="section">
     <h1>Pillars of Islam: Understand and Learn Them Through Online Quran Lessons</h1>
-    <img src="img/sermon-3.jpg" alt="Pillars of Islam illustration">
+    <img src="img/sermon-3.webp" alt="Pillars of Islam illustration">
     <p>All praise is due to Allah, who has guided us to Islam, the complete way of life. We praise Him, seek His help, and ask for His forgiveness. We seek refuge in Allah from the evil of our own selves and from our wrong actions.</p>
   
     <p>Dear brothers and sisters, the foundation of Islam rests on five essential pillars that every Muslim must uphold. These pillars are the declaration of faith (Shahada), prayer (Salah), fasting (Sawm), charity (Zakat), and pilgrimage (Hajj).</p>
@@ -379,7 +379,7 @@
               <h4 class="text-light mb-4">Latest Post</h4>
               <div class="d-flex border-bottom border-secondary py-4">
                 <img
-                  src="img/blog-mini-1.jpg"
+                  src="img/blog-mini-1.webp"
                   class="img-fluid flex-shrink-0"
                   alt=""
                 />
@@ -392,7 +392,7 @@
               </div>
               <div class="d-flex py-4">
                 <img
-                  src="img/blog-mini-2.jpg"
+                  src="img/blog-mini-2.webp"
                   class="img-fluid flex-shrink-0"
                   alt=""
                 />
@@ -440,4 +440,5 @@
   <script src="js/main.js" defer></script>
   </body>
 </html>
+
 
