--- a/price.html
+++ b/price.html
@@ -395,7 +395,7 @@
         <!-- title whole -->
         <div class="title-whole" style="padding: 50 0; text-align: center">
           <img
-            src="img/title-whoil.jpg"
+            src="img/title-whoil.webp"
             alt="image-title"
             style="width: 50%; height: 50%; padding: 50px 0"
           />
@@ -529,7 +529,7 @@
               <h4 class="text-light mb-4">Latest Post</h4>
               <div class="d-flex border-bottom border-secondary py-4">
                 <img
-                  src="img/blog-mini-1.jpg"
+                  src="img/blog-mini-1.webp"
                   class="img-fluid flex-shrink-0"
                   alt=""
                 />
@@ -542,7 +542,7 @@
               </div>
               <div class="d-flex py-4">
                 <img
-                  src="img/blog-mini-2.jpg"
+                  src="img/blog-mini-2.webp"
                   class="img-fluid flex-shrink-0"
                   alt=""
                 />
@@ -590,4 +590,5 @@
   <script src="js/main.js" defer></script>
   </body>
 </html>
+
 
