--- a/team.html
+++ b/team.html
@@ -216,7 +216,7 @@
         <div class="row g-5">
           <div class="col-lg-4 col-xl-5">
             <div class="team-img wow zoomIn" data-wow-delay="0.1s">
-              <img src="img/team-1.jpg" class="img-fluid" alt="" />
+              <img src="img/team-1.webp" class="img-fluid" alt="" />
             </div>
           </div>
           <div class="col-lg-8 col-xl-7">
@@ -259,7 +259,7 @@
             <div class="row g-4">
               <div class="col-md-4">
                 <div class="team-item wow zoomIn" data-wow-delay="0.2s">
-                  <img src="img/team-2.jpg" class="img-fluid w-100" alt="" />
+                  <img src="img/team-2.webp" class="img-fluid w-100" alt="" />
                   <div class="team-content text-dark text-center py-3">
                     <div class="team-content-inner">
                       <h5 class="mb-0">Mustafa Kamal</h5>
@@ -286,7 +286,7 @@
               </div>
               <div class="col-md-4">
                 <div class="team-item wow zoomIn" data-wow-delay="0.4s">
-                  <img src="img/team-3.jpg" class="img-fluid w-100" alt="" />
+                  <img src="img/team-3.webp" class="img-fluid w-100" alt="" />
                   <div class="team-content text-dark text-center py-3">
                     <div class="team-content-inner">
                       <h5 class="mb-0">Nahiyan Momen</h5>
@@ -313,7 +313,7 @@
               </div>
               <div class="col-md-4">
                 <div class="team-item wow zoomIn" data-wow-delay="0.6s">
-                  <img src="img/team-4.jpg" class="img-fluid w-100" alt="" />
+                  <img src="img/team-4.webp" class="img-fluid w-100" alt="" />
                   <div class="team-content text-dark text-center py-3">
                     <div class="team-content-inner">
                       <h5 class="mb-0">Asfaque Ali</h5>
@@ -440,7 +440,7 @@
               <h4 class="text-light mb-4">Latest Post</h4>
               <div class="d-flex border-bottom border-secondary py-4">
                 <img
-                  src="img/blog-mini-1.jpg"
+                  src="img/blog-mini-1.webp"
                   class="img-fluid flex-shrink-0"
                   alt=""
                 />
@@ -453,7 +453,7 @@
               </div>
               <div class="d-flex py-4">
                 <img
-                  src="img/blog-mini-2.jpg"
+                  src="img/blog-mini-2.webp"
                   class="img-fluid flex-shrink-0"
                   alt=""
                 />
@@ -501,4 +501,5 @@
   <script src="js/main.js" defer></script>
   </body>
 </html>
+
 
