--- a/testimonial.html
+++ b/testimonial.html
@@ -213,7 +213,7 @@
         <div class="testimonial-item">
           <div class="d-flex mb-3">
             <div class="position-relative">
-              <img src="img/testimonial-1.jpg" class="img-fluid" alt="" />
+              <img src="img/testimonial-1.webp" class="img-fluid" alt="" />
               <div class="btn-md-square bg-primary rounded-circle position-absolute" style="top: 25px; left: -25px">
                 <i class="fa fa-quote-left text-dark"></i>
               </div>
@@ -243,7 +243,7 @@
         <div class="testimonial-item">
           <div class="d-flex mb-3">
             <div class="position-relative">
-              <img src="img/testimonial-2.jpg" class="img-fluid" alt="" />
+              <img src="img/testimonial-2.webp" class="img-fluid" alt="" />
               <div class="btn-md-square bg-primary rounded-circle position-absolute" style="top: 25px; left: -25px">
                 <i class="fa fa-quote-left text-dark"></i>
               </div>
@@ -273,7 +273,7 @@
         <div class="testimonial-item">
           <div class="d-flex mb-3">
             <div class="position-relative">
-              <img src="img/testimonial-3.jpg" class="img-fluid" alt="" />
+              <img src="img/testimonial-3.webp" class="img-fluid" alt="" />
               <div class="btn-md-square bg-primary rounded-circle position-absolute" style="top: 25px; left: -25px">
                 <i class="fa fa-quote-left text-dark"></i>
               </div>
@@ -303,7 +303,7 @@
         <div class="testimonial-item">
           <div class="d-flex mb-3">
             <div class="position-relative">
-              <img src="img/testimonial-4.jpg" class="img-fluid" alt="" />
+              <img src="img/testimonial-4.webp" class="img-fluid" alt="" />
               <div class="btn-md-square bg-primary rounded-circle position-absolute" style="top: 25px; left: -25px">
                 <i class="fa fa-quote-left text-dark"></i>
               </div>
@@ -430,7 +430,7 @@
               <h4 class="text-light mb-4">Latest Post</h4>
               <div class="d-flex border-bottom border-secondary py-4">
                 <img
-                  src="img/blog-mini-1.jpg"
+                  src="img/blog-mini-1.webp"
                   class="img-fluid flex-shrink-0"
                   alt=""
                 />
@@ -443,7 +443,7 @@
               </div>
               <div class="d-flex py-4">
                 <img
-                  src="img/blog-mini-2.jpg"
+                  src="img/blog-mini-2.webp"
                   class="img-fluid flex-shrink-0"
                   alt=""
                 />
@@ -491,4 +491,5 @@
   <script src="js/main.js" defer></script>
   </body>
 </html>
+
 
