--- a/tajweet-courses-3.html
+++ b/tajweet-courses-3.html
@@ -296,7 +296,7 @@
             <div class="col-md-6 mb-3 colum-left">
               <div class="title">
                 <h2 class="mb-2">Tajweed in Practice: From Theory to Perfection</h2>
-                <img src="img/courses-3.png" alt="Tajweed Practice" style="width: 100%;">
+                <img src="img/courses-3.webp" alt="Tajweed Practice" style="width: 100%;">
                 <span class="line"></span>
               </div>
             </div>
@@ -562,5 +562,6 @@
   <script src="js/main.js" defer></script>
   </body>
 </html>
+
 
 
