--- a/islamic-studies-courses-9.html
+++ b/islamic-studies-courses-9.html
@@ -298,7 +298,7 @@
       <div class="col-md-6 mb-3 colum-left">
         <div class="title">
           <h2 class="mb-2">Prophetic Biography & Islamic History</h2>
-          <img src="img/courses-9.png" alt="Islamic History" style="width: 100%;">
+          <img src="img/courses-9.webp" alt="Islamic History" style="width: 100%;">
           <span class="line"></span>
         </div>
       </div>
@@ -570,5 +570,6 @@
   <script src="js/main.js" defer></script>
   </body>
 </html>
+
 
 
