--- a/reading-courses-1.html
+++ b/reading-courses-1.html
@@ -305,7 +305,7 @@
           <div class="col-md-6 mb-3 colum-left">
             <div class="title">
               <h2 class="mb-2">The Art of Tajweed: Perfecting Your Quran Recitation</h2>
-              <img src="img/courses-1.png" alt="" style="width: 100%;">
+              <img src="img/courses-1.webp" alt="" style="width: 100%;">
               <span class="line"></span>
             </div>
           </div>
@@ -579,5 +579,6 @@
   <script src="js/main.js" defer></script>
   </body>
 </html>
+
 
 
