--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
       <div class="container py-5">
         <div class="row">
           <div class="col-lg-12">
-            <p style="color: #ffad05; font-size: 20px;">why choose us?</p>
+            <p style="color: #ffad05; font-size: 20px;" text-shadow: 1px 1px 2px rgba(0,0,0,0.7);>why choose us?</p>
             <h2 style="margin: 30px auto 50px;">Learn Quran Online with Tajweed at Sabil Al Quran Features:</h2>
 
             <div class="row g-4">
@@ -1329,6 +1329,7 @@ src="img/courses-3.webp"
 </body>
 
 </html>
+
 
 
 
