--- a/index.html
+++ b/index.html
@@ -232,8 +232,11 @@
       <div class="container py-5">
         <div class="row">
           <div class="col-lg-12">
-            <p style="color: #ffad05; font-size: 20px;" >why choose us?</p>
-            <style>text-shadow: 1px 1px 2px rgba(0,0,0,0.7);</style>
+            
+            <p style="color: #ffad05; font-size: 20px; text-shadow: 1px 1px 2px rgba(0,0,0,0.7);">
+  Why Choose Us?
+</p>
+
             <h2 style="margin: 30px auto 50px;">Learn Quran Online with Tajweed at Sabil Al Quran Features:</h2>
 
             <div class="row g-4">
@@ -1330,6 +1333,7 @@ src="img/courses-3.webp"
 </body>
 
 </html>
+
 
 
 
