--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
   font-size: 1rem !important;
 }
   }
-  /* About */
-  .card-about {
+  /*  */
+  .card- {
     height: 300px;
     display: flex;
     flex-direction: column;
@@ -88,7 +88,7 @@
     padding: 30px;
   }
 
-  .card-about:hover {
+  .card-:hover {
     border-color: white;
   }
 
@@ -158,7 +158,7 @@
         <div class="collapse navbar-collapse bg-white" id="navbarCollapse">
           <div class="navbar-nav ms-lg-auto mx-xl-auto">
             <a href="index.html" class="nav-item nav-link active">Home</a>
-            <a href="about.html" class="nav-item nav-link">About</a>
+            <a href=".html" class="nav-item nav-link"></a>
             <a href="courses.html" class="nav-item nav-link">Courses</a>
             <a href="price.html" class="nav-item nav-link">Pricing</a>
             <div class="nav-item dropdown">
@@ -208,7 +208,7 @@
           <h1 class="text-title display-1 mb-5 text-dark" style="font-size: 3.5rem;">
             Purity Lies in the Words of the Quran
           </h1>
-          <a href="about.html" class="btn btn-primary py-3 px-5">Read More</a>
+          <a href=".html" class="btn btn-primary py-3 px-5">Read More</a>
         </div>
       </div>
     </div>
@@ -227,7 +227,7 @@
 
 
   <!-- About Start -->
-  <section>
+  <section class='    background: #f9fafb'>
     <div class="container-fluid about py-5">
       <div class="container py-5">
         <div class="row">
@@ -1333,6 +1333,7 @@ src="img/courses-3.webp"
 </body>
 
 </html>
+
 
 
 
