--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <div class="collapse navbar-collapse bg-white" id="navbarCollapse">
           <div class="navbar-nav ms-lg-auto mx-xl-auto">
             <a href="index.html" class="nav-item nav-link active">Home</a>
-            <a href=".html" class="nav-item nav-link"></a>
+            <a href="about.html" class="nav-item nav-link"></a>
             <a href="courses.html" class="nav-item nav-link">Courses</a>
             <a href="price.html" class="nav-item nav-link">Pricing</a>
             <div class="nav-item dropdown">
@@ -1333,6 +1333,7 @@ src="img/courses-3.webp"
 </body>
 
 </html>
+
 
 
 
