--- a/blog.html
+++ b/blog.html
@@ -79,7 +79,7 @@
             </div>
             <div class="h-100 d-inline-flex align-items-center">
               <span class="far fa-envelope me-2 text-dark"></span>
-              <a href="#" class="text-secondary"><span>info@MmSoftwareGroup.com</span></a>
+              <a href="#" class="text-secondary"><span>info@nooralquranacademy.com</span></a>
             </div>
           </div>
           <div class="col-lg-5 text-end">
@@ -420,7 +420,7 @@ Interactive Apps: Like "HelloTalk" to practice with native speakers.</p>
                         &copy; <a class="border-bottom" href="index.html">Noor Al-Quran</a>, All Right Reserved.
                     </div>
                     <div class="col-md-6 text-center text-md-end">
-                        Designed By <a class="border-bottom" href="">MM Software Group</a>
+                        Designed By <a class="border-bottom" href="https://mostafa-eldiba.github.io/personalWebsiteMostafaEldiba/">Mostafa Eldiba</a>
                     </div>
                 </div>
             </div>
@@ -447,4 +447,5 @@ Interactive Apps: Like "HelloTalk" to practice with native speakers.</p>
 
 
 </html>
+
 
