--- a/testimonial.html
+++ b/testimonial.html
@@ -80,7 +80,7 @@
               <div class="h-100 d-inline-flex align-items-center">
                 <span class="far fa-envelope me-2 text-dark"></span>
                 <a href="#" class="text-secondary"
-                  ><span>info@MmSoftwareGroup.com</span></a
+                  ><span>Mostafa Eldiba</span></a
                 >
               </div>
             </div>
@@ -466,7 +466,7 @@
             All Right Reserved.
           </div>
           <div class="col-md-6 text-center text-md-end">
-            Designed By <a class="border-bottom" href="">MM Software Group</a>
+            Designed By <a class="border-bottom" href="https://mostafa-eldiba.github.io/personalWebsiteMostafaEldiba/">Mostafa Eldiba</a>
           </div>
         </div>
       </div>
@@ -491,5 +491,6 @@
   <script src="js/main.js" defer></script>
   </body>
 </html>
+
 
 
