--- a/testimonial.html
+++ b/testimonial.html
@@ -203,8 +203,8 @@
     <!-- End Whatsapp -->
 
       <!-- Testiminial Start -->
-  <div class="container-fluid testimonial py-5">
-    <div class="container py-5">
+  <div class="container-fluid testimonial pt-5">
+    <div class="container pt-5">
       <div class="text-center mx-auto mb-5 wow fadeIn" data-wow-delay="0.1s" style="max-width: 700px">
         <p class="fs-5 text-uppercase text-primary">Testimonial</p>
         <h1 class="display-3">What People Say About <a href="" style="color: #ffad05;">Noor Al-quran</a></h1>
@@ -219,7 +219,7 @@
               </div>
             </div>
             <div class="ps-3 my-auto">
-              <h5 class="mb-0">M Mohamed</h5>
+              <h5 class="mb-0">M. Mohamed</h5>
               <p class="m-0">a deeper understanding of Quran</p>
             </div>
           </div>
