--- a/about.html
+++ b/about.html
@@ -299,7 +299,7 @@
           </div>
           <div class="col-lg-8 col-xl-7">
             <div class="team-item wow fadeIn" data-wow-delay="0.1s">
-              <h1>Mostafa Eldib</h1>
+              <h1>Mostafa Eldiba</h1>
               <h5 class="fw-normal fst-italic text-primary mb-4">President</h5>
               <p class="mb-4">
                 Teaching the Quran online has become a powerful tool for
