--- a/sermon.html
+++ b/sermon.html
@@ -161,8 +161,8 @@
      
 
         <!-- Sermon Start -->
-        <div class="container-fluid sermon py-5">
-            <div class="container py-5">
+        <div class="container-fluid sermon pt-5">
+            <div class="container pt-5">
                 <div class="text-center mx-auto mb-5 wow fadeIn" data-wow-delay="0.1s" style="max-width: 700px;">
                     <p class="fs-5 text-uppercase text-primary">Sermons</p>
                     <h1 class="display-3">Join the Online Noor Al-quran for Foreigners</h1>
@@ -171,7 +171,8 @@
                     <div class="col-lg-6 col-xl-4">
                         <div class="sermon-item wow fadeIn" data-wow-delay="0.1s">
                             <div class="overflow-hidden p-4 pb-0">
-                                <a href="how-to-get-closer-to-allah-sermon.html"><img src="img/sermon-1.webp" class="img-fluid w-100" alt=""></a>
+                                <a href="how-to-get-closer-to-allah-sermon.html">
+                                    <img src="img/sermon-1.webp" class="img-fluid w-100 " alt="how to get closer to allah sermon"></a>
                             </div>
                             <div class="p-4">
                                 <div class="sermon-meta d-flex justify-content-between pb-2">
@@ -194,7 +195,8 @@
                    <div class="col-lg-6 col-xl-4">
                         <div class="sermon-item wow fadeIn" data-wow-delay="0.3s">
                             <div class="overflow-hidden p-4 pb-0">
-                                <a href="the-importance-of-hajj-in-islam-sermon.html"><img src="img/sermon-2.webp" class="img-fluid w-100" alt=""></a>
+                                <a href="the-importance-of-hajj-in-islam-sermon.html">
+                                    <img src="img/sermon-2.webp" class="img-fluid w-100" alt="the importance of hajj in islam sermon"></a>
                             </div>
                             <div class="p-4">
                                 <div class="sermon-meta d-flex justify-content-between pb-2">
@@ -217,7 +219,8 @@
                    <div class="col-lg-6 col-xl-4">
                         <div class="sermon-item wow fadeIn" data-wow-delay="0.5s">
                             <div class="overflow-hidden p-4 pb-0">
-                                <a href="pillars-of-islam-sermon.html"><img src="img/sermon-3.webp" class="img-fluid w-100" alt=""></a>
+                                <a href="pillars-of-islam-sermon.html">
+                                    <img src="img/sermon-3.webp" class="img-fluid w-100" alt="pillars of islam sermon"></a>
                             </div>
                             <div class="p-4">
                                 <div class="sermon-meta d-flex justify-content-between pb-2">
